--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
 
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Simple Web</title>
@@ -20,7 +20,7 @@
       <p class="header1">Resize this responsive page to see the effect!</p>
       <button class="header1">MUA SẮM</button> -->
 
-      <img src="/img/HeaderImg.PNG" alt="" class="imgHeader" />
+      <img src="./img/HeaderImg.PNG" alt="" class="imgHeader" />
     </div>
 
     <div class="container1">
@@ -37,7 +37,7 @@
           </p>
         </div>
         <div class="col-sm-6">
-          <img src="/img/chair2.jpg" alt="chair" class="chair" />
+          <img src="./img/chair2.jpg" alt="chair" class="chair" />
         </div>
       </div>
     </div>
@@ -49,21 +49,21 @@
           <button class="vproduct">XEM SẢN PHẨM</button>
         </div>
         <div class="col-sm-3">
-          <img src="/img/muong.jpg" alt="" class="img2" />
+          <img src="./img/muong.jpg" alt="" class="img2" />
           <h3>Men đá</h3>
           <p class="content">
             Các thiết kế thủ công khiến mỗi ngày đều như một bữa tiệc
           </p>
         </div>
         <div class="col-sm-3">
-          <img src="/img/ghe.jpg" alt="" class="img2" />
+          <img src="./img/ghe.jpg" alt="" class="img2" />
           <h3>Nội thất</h3>
           <p class="content">
             Những tác phẩm đơn giản nhưng tinh tế cho mọi căn phòng trong nhà
           </p>
         </div>
         <div class="col-sm-3">
-          <img src="/img/guong.jpg" alt="" class="img2" />
+          <img src="./img/guong.jpg" alt="" class="img2" />
           <h3>Trang trí</h3>
           <p class="content">
             Các yếu tố trang nhã để phối và kết hợp mang lại một hình ảnh cao
@@ -78,7 +78,7 @@
 
       <div class="row">
         <div class="col-sm-4">
-          <img src="/img/dia.jpg" alt="" class="img3" />
+          <img src="./img/dia.jpg" alt="" class="img3" />
           <h3>Sinh Phúc</h3>
           <p class="content">
             "Những bữa ăn cùng gia đình tôi luôn đặc biệt hơn vì có những chiếc
@@ -86,7 +86,7 @@
           </p>
         </div>
         <div class="col-sm-4">
-          <img src="/img/sofa.jpg" alt="" class="img3" />
+          <img src="./img/sofa.jpg" alt="" class="img3" />
           <h3>Bùi Chí Nguyên</h3>
           <p class="content">
             "Tôi rất hài lòng với chiếc ghế sofa mới của tôi, chất lượng tuyệt
@@ -94,7 +94,7 @@
           </p>
         </div>
         <div class="col-sm-4">
-          <img src="/img/sach.jpg" alt="" class="img3" />
+          <img src="./img/sach.jpg" alt="" class="img3" />
           <h3>Trần Thiên Kim</h3>
           <p class="content">
             "Tôi yêu thích những món đồ trang trí vững bền cùng thời gian của
@@ -111,7 +111,7 @@
       <p class="footer1">Địa chỉ Email xinchao@trangwebhay.vn</p>
       <button class="footer1">MUA SẮM</button> -->
 
-      <img src="/img/FooterImg.PNG" alt="" class="imgFooter" />
+      <img src="./img/FooterImg.PNG" alt="" class="imgFooter" />
     </div>
 
     <div class="footer" id="row-footer">
